# sistema-academia

./: .gitignore  CMakeLists.txt  README.md
api/: .env.example  package-lock.json  package.json
api/src/: db.ts  server.ts
api/src/routes/: alunos.ts  equipamentos.ts  instrutores.ts  matriculas.ts  planos.ts
api/src/types/: alunos.ts  types.ts
database/: DDL.sql  DML.sql
include/: aluno_crud.h  equipamento_crud.h  http_utils.h  instrutor_crud.h  matricula_crud.h  plano_crud.h  structs.h
src/: aluno_crud.cpp  equipamento_crud.cpp  http_utils.cpp  instrutor_crud.cpp  main.cpp  matricula_crud.cpp  plano_crud.cpp
